--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /build/
 /gradle/
 /out/
-/build.gradle/
-/gradlew/
-/gradlew.bat/
-/settings.gradle/
+build.gradle
+gradlew
+gradlew.bat
+settings.gradle
